--- a/week 1/ideas.html
+++ b/week 1/ideas.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simran's net art portal</title>
+</head>
+<body>
+    <main>
+        <h1> Welcome 2 Simran's Ideas</h1>
+    <ul>
+        <li>portfolio template</li>
+        <li>meme archive</li>
+        <li>Thesis Blog</li>
+        <li>travel planner</li>
+        <li>food blog</li>
+        <li>what can I cook</li>
+        <li>what to eat generator</li>
+        <li>fun quiz based website</li>
+        <li>landing page generator</li>
+        <li>baby boomer's guide</li>
+        <li>jokes generator</li>
+    </ul>
+    </main>
+    
+</body>
+</html>
 
