--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1> Welcome 2 Simran's Page</h1>
         <br> <br>
     <ul>
-        <li> <a href="./week 1/ideas.html"> week one: brainstorm session</a></li>
+        <li> <a href="./week 1/ideas.html"> week 1: brainstorm session</a></li>
     </ul>
     </main>
     
