--- a/index.html
+++ b/index.html
@@ -4,22 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Combo&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://use.typekit.net/zoh0lqn.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
+
     <title>Simran's net art portal</title>
 </head>
 <body>
-    <main>
+    <div >
+    <header>
         <h1> Welcome 2 Simran's Page</h1>
-        <br> <br>
-    <ul>
+    </header>
+<div class="sidenav">
+    <!-- <a class="active" href="#home">Home</a> -->
+    <a href="week 1/ideas.html">Ideas</a>
+    <a href="week 2/index.html">Autobiographical Adventure</a>
+    <a href="#">Novel Navs</a>
+    <a href="#">Javascript Spells</a>
+    <a href="#">p2p web</a>
+    <a href="#">Upcoming</a>
+    <a href="#">Upcoming</a>
+    <a href="#">Upcoming</a>
+    <a href="#">Upcoming</a>
+    <a href="#">Upcoming</a>
+    <a href="#">Upcoming</a>
+
+</div>
+
+    <!-- <ul>
         <li> <a href="./week 1/ideas.html"> week 1: brainstorm session</a></li>
-    </ul>
-    </main>
-    
+    </ul> -->
+
+</div>
 </body>
 </html>
