--- a/week 1/ideas.html
+++ b/week 1/ideas.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="stylesheet" href="https://use.typekit.net/zoh0lqn.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <title>Simran's net art portal</title>
+    <header>
+        <h3>Simran's Ideas</h3>
+    </header>
 </head>
 <body>
-    <main>
-        <h1> Welcome 2 Simran's Ideas</h1>
-    <ul>
+    <ul style="align-items: center; margin-left: 30px;">
         <li>portfolio template</li>
         <li>meme archive</li>
         <li>Thesis Blog</li>
@@ -21,9 +28,6 @@
         <li>landing page generator</li>
         <li>baby boomer's guide</li>
         <li>jokes generator</li>
-    </ul>
-    </main>
-    
+    </ul>    
 </body>
 </html>
-
