--- a/week 2/index.html
+++ b/week 2/index.html
@@ -1,1 +1,92 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../style.css" rel="stylesheet">
+    <link href="week2.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://use.typekit.net/zoh0lqn.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <title>Simran's net art portal</title>
+    <header>
+        <h3> Welcome 2 Simran's Autobiographical Adventure</h3>
+    </header>
+</head>
+
+<body>
+    <div id="col">
+        <div class="avatarA">
+            <a href="Ace.html">
+                <img src="images/Asset 1@2x.png" alt="Ace" />
+            </a>
+        </div>
+        <div class="avatarB" >
+            <a href="two.html" >
+                <img src="images/Asset 2@2x.png" alt="two" width="124px" height="172px" />
+            </a>
+        </div>
+        <div class="avatarC">
+            <a href="three.html">
+                <img src="images/Asset 3@2x.png" alt="three" width="124px" height="172px" />
+            </a>
+        </div>
+        <div class="avatarA">
+            <a href="four.html ">
+                <img src="images/Asset 4@2x.png" alt="four" width="124px" height="172px"/>
+            </a>
+        </div>
+        <div class="avatarC">
+            <a href="five.html">
+                <img src="images/Asset 5@2x.png" alt="five" width="124px" height="172px"/>
+            </a>
+        </div>
+        <div class="avatarE">
+            <a href="six.html">
+                <img src="images/Asset 6@2x.png" alt="six" width="124px" height="172px"/>
+            </a>
+        </div>
+        <div class="avatarD">
+            <a href="seven.html">
+                <img src="images/Asset 7@2x.png" alt="seven" width="124px" height="172px"/>
+            </a>
+        </div>
+        <div class="avatarA">
+            <a href="eight.html">
+                <img src="images/Asset 8@2x.png" alt="eight" width="124px" height="172px" />
+            </a>
+        </div>
+        <div class="avatarC">
+            <a href="nine.html">
+                <img src="images/Asset 9@2x.png" alt="nine" width="124px" height="172px" />
+            </a>
+        </div>
+        <div class="avatarE">
+            <a href="ten.html">
+                <img src="images/Asset 10@2x.png" alt="ten" width="124px" height="172px" />
+            </a>
+        </div>
+        <div class="avatarD">
+            <a href="eleven.html">
+                <img src="images/Asset 11@2x.png" alt="eleven" width="124px" height="172px"/>
+            </a>
+        </div>
+        <div class="avatarB">
+            <a href="twelve.html">
+                <img src="images/Asset 12@2x.png" alt="twelve" width="124px" height="172px"/>
+            </a>
+        </div>
+        <div class="avatarC">
+            <a href="thirteen.html">
+                <img src="images/Asset 13@2x.png" alt="thirteen" width="124px" height="172px" />
+            </a>
+        </div>
+    </div>
+
+</body>
+
+</html>
