--- a/week 2/two.html
+++ b/week 2/two.html
@@ -5,27 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../style.css" rel="stylesheet">
+    <link href="week2.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Combo&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/zoh0lqn.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
     <title>Simran's net art portal</title>
     <header>
         <h1>------------</h1>
     </header>
 </head>
 <body>
-    <p> In her second class, Simran had seen computers in her classroom. She used to play outdoor games with her neighbours. <br>
-    <a href="https://www.google.com/search?q=old+video+games+console+in+india&tbm=isch&ved=2ahUKEwiX8vyzk5X6AhXwn3IEHanODu8Q2-cCegQIABAA&oq=old+video+games+console+in+india&gs_lcp=CgNpbWcQA1CjBliEDWC6E2gAcAB4AIABAIgBAJIBAJgBAKABAaoBC2d3cy13aXotaW1nwAEB&sclient=img&ei=eD0iY5fWO_C_ytMPqZ27-A4&bih=714&biw=1536&rlz=1C1GEWG_enIN960IN960#imgrc=mwB-gK63s4P5tM"  /> 
-    <br>
+    <p> In her second class, Simran had seen computers in her classroom. Her elder brother is into video gaming so he got a computer to the house. Since they used to share the bedroom she would spend 
+        her time looking at him playing games, although he wouldn't allow her to touch the computer.
+        <br>She used to play outdoor games with her neighbours. She also rememebers playing with pokemon cards and WWE cards.<br>
+    <a href="https://m.media-amazon.com/images/I/71WURws40nL._AC_SY450_.jpg">Pokemon Cards</a><br>
     She had an old casette player, made by her engineer mother, on which she used to listen to songs of that time. There were bollywood songs and songs in her mother tongue: Marathi.
     She used to spend a lot of time rewinding and listening to a large collectgion of casettes.
     <br>
-    <a href="https://twitter.com/npueu/status/1302963865873858561?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1302963865873858561%7Ctwgr%5E905b070ea257a75df257814809eec1fcd6383ae1%7Ctwcon%5Es1_&ref_url=https%3A%2F%2Fwww.buzzfeed.com%2Fsumedha_bharpilania%2F90s-indian-kids-memories" />
-
-    </p>g
+    <a href="https://twitter.com/npueu/status/1302963865873858561?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1302963865873858561%7Ctwgr%5E905b070ea257a75df257814809eec1fcd6383ae1%7Ctwcon%5Es1_&ref_url=https%3A%2F%2Fwww.buzzfeed.com%2Fsumedha_bharpilania%2F90s-indian-kids-memories">
+     Collection of Casettes</a>
+    </p>
     
 </body>
 </html>
