--- a/week 2/five.html
+++ b/week 2/five.html
@@ -5,22 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../style.css" rel="stylesheet">
+    <link href="week2.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Combo&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/zoh0lqn.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
     <title>Simran's net art portal</title>
     <header>
         <h1>------------</h1>
     </header>
 </head>
 <body>
-    <main>
-        <h1> Welcome 2 Simran's Ideas</h1><br><br>
-    <p> In her first class, </p>
-    </main>
-    
+    <p> When Simran was in fifth class she got access to her father's laptop on Sundays for a few hours. That was the time she spend playing online games.
+        There was a game called Skyrama that kinda became her favourite.
+        <br>
+            <a href="https://assets.funnygames.org/0/14160/67181/672x448/skyrama.webp" >Skyrama????</a> 
+            <br>
+            Simran's mother got her first phone that Simran spent a lot to time changing its settings and customising it.
+            <br>
+            <a href="https://i.pinimg.com/originals/d2/70/05/d27005b4dcead8b7a1bbc742dccc4c23.jpg"> LG made phone?</a>
+        
+            </p>
 </body>
 </html>
