--- a/week 2/six.html
+++ b/week 2/six.html
@@ -5,22 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../style.css" rel="stylesheet">
+    <link href="week2.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Combo&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/zoh0lqn.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
     <title>Simran's net art portal</title>
     <header>
         <h1>------------</h1>
     </header>
 </head>
 <body>
-    <main>
-        <h1> Welcome 2 Simran's Ideas</h1><br><br>
-    <p> In her first class, </p>
-    </main>
-    
+    <p> When Simran was in sixth class she got her first ipod, it wasn't an apple ipod though so more of a walkman but it wasn't sony either.
+        She has hundreads of songs in its small 2GB memory. It was extremely cute and is now a treasure.
+        <br>
+            <a href="https://images.reevoo.com/products/586/586964/550x550.jpg?fingerprint=c0360fe9841285c20611a685ca75b846eb848a8d&gravity=Center" >What mickey what?</a> 
+            <br>
+            Simran's aunt had a flip phone that she was obsessed with, she would love playing games in it and playing music.
+            <br>
+            <a href="https://i.ebayimg.com/images/g/-qAAAOSw1BlhUupR/s-l640.jpg" >Flip Phones Yassss</a>
+        
+            </p>
 </body>
 </html>
