--- a/week 2/nine.html
+++ b/week 2/nine.html
@@ -5,22 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../style.css" rel="stylesheet">
+    <link href="week2.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Combo&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/zoh0lqn.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
     <title>Simran's net art portal</title>
     <header>
         <h1>------------</h1>
     </header>
 </head>
 <body>
-    <main>
-        <h1> Welcome 2 Simran's Ideas</h1><br><br>
-    <p> In her first class, </p>
-    </main>
-    
+    <p> In her first class, Simran had no access to computers. She used to play video games on saturday with her bestfriend. <br>
+        <a href="https://www.google.com/search?q=old+video+games+console+in+india&tbm=isch&ved=2ahUKEwiX8vyzk5X6AhXwn3IEHanODu8Q2-cCegQIABAA&oq=old+video+games+console+in+india&gs_lcp=CgNpbWcQA1CjBliEDWC6E2gAcAB4AIABAIgBAJIBAJgBAKABAaoBC2d3cy13aXotaW1nwAEB&sclient=img&ei=eD0iY5fWO_C_ytMPqZ27-A4&bih=714&biw=1536&rlz=1C1GEWG_enIN960IN960#imgrc=mwB-gK63s4P5tM" > Old Video Game Console?</a> 
+        <br>
+        She had an old casette player, made by her engineer mother, on which she used to listen to songs of that time. There were bollywood songs and songs in her mother tongue: Marathi. 
+        <br>
+        <a href="https://www.google.com/search?q=old+casette+player+in+india&tbm=isch&ved=2ahUKEwiUrcKQmZX6AhWvsHIEHVtbD4AQ2-cCegQIABAA&oq=old+casette+player+in+india&gs_lcp=CgNpbWcQAzoECCMQJzoGCAAQHhAHOgUIABCABFCWOliUV2DxWGgBcAB4AIABYIgBjgmSAQIxN5gBAKABAaoBC2d3cy13aXotaW1nwAEB&sclient=img&ei=eUMiY9SMDq_hytMP27a9gAg&bih=714&biw=1536&rlz=1C1GEWG_enIN960IN960#imgrc=gimvO9698VUD-M&imgdii=nlg3mk1XOGbd8M"> Casette player?</a>
+    </p>
 </body>
 </html>
