--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <!-- <a class="active" href="#home">Home</a> -->
     <a href="week 1/ideas.html">Ideas</a>
     <a href="week 2/index.html">Autobiographical Adventure</a>
-    <a href="#">Novel Navs</a>
-    <a href="#">Javascript Spells</a>
+    <a href="week 3/index.html">Novel Navs</a>
+    <a href="week 4/index.html">Javascript Spells</a>
     <a href="#">p2p web</a>
     <a href="#">Upcoming</a>
     <a href="#">Upcoming</a>
